co2ok_dojo/co2ok_dojo/static/css/style.css
/* ... */
.btn:hover, .btn:focus, .btn:active, .btn.active, .open .dropdown-toggle.btn {
    color: #fff;
    background-color: #fec503;
    border-color: #f6bf01;
}

.btn {
    display: inline-block;
    padding: 8px 20px;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-image: none;
    border: 1px solid transparent;
    border-radius: 4px;
}

.btn-xl {
    color: #fff;
     background-color: #726FB9;
    border-color: #726FB9;
    font-family: "Robot",sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    border-radius: 3px;
    font-size: 18px;
    padding: 20px 40px;
}

/* Back to top button
---------------------------------- */
#back-top {
    position: fixed;
    z-index: 1000;
    bottom: 40px;
    right: 50px;
}
#back-top a {
    width: 60px;
    height: 60px;
    display: block;
    text-align: center;
    font: 11px/100% Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    text-decoration: none;
    color: #FFFFFF;
    background: #A9A9B1;
    /* background color transition */
    -webkit-transition: 1s;
    -moz-transition: 1s;
    transition: 1s;
}
#back-top a:hover {
    background: #fed136;
}
/* arrow icon (span tag) */
#back-top i {
    margin-top: 15px;
    font-size: 28px;
}

@media only screen
and (min-width : 320px)
and (max-width : 480px) {
#back-top {
    position: fixed;
    bottom: 10px;
    right: 30px;
}
#back-top a {
    width: 40px;
    height: 40px;
}
#back-top i {
    margin-top: 7px;
    font-size: 20px;
}
.get_involved_button
{

   width: 90%;

}
.get_involved_button span{

    font-size: 13px;
    font-weight: 600px;
    width: 100%;
    text-align: center;

}
}

/* eingen styling */


 .privacy h1
 {

   font-weight: 600;

 }

.privacy p
{

   text-align: left;
   font-weight: 300;
   font-size: 17px;

}

/* .get_involved_button
{

   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;

} */

.get_involved_button p{

   color: white;
   text-align: center;
   width: 100%;
   height: auto;

}

/* .landing_container
{

  position: absolute;
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

} */

.home_container
{

   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;

}

.intro_head
{

   width: 100%;
   height: 20%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
   margin-top: 70px;

}

@media only screen and (max-width: 360px) {
    .intro_head {
        margin-top: 85px;
        margin-bottom: -180px;
    }
}

@media only screen and (min-width: 361px) and (max-width: 400px) {
    .intro_head {
        margin-top: 75px;
        margin-bottom: -180px;
    }
}

@media only screen and (max-width: 768px) and (min-width: 400px) {
    .intro_head {
        margin-top: 90px;
        margin-bottom: -180px;
    }
}

.world_bol_container
{
    margin-top: -2%;
    z-index: -1;
  width: 100%;
  height: 75%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

}

.whitespace
{

   width: 35%;
   height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   z-index: 3;

}

.ninja_world_bol
{

  width: 85%;
  height: 100%;
  /* width: 10%;
  height: auto; */
  display: flex;
  justify-content: flex-start;
  align-items: center;
  background-image: url(../images/banner_co2ok_wereldbol.png);
  background-position: left center;
  background-repeat: no-repeat;
  background-size: 65%;

}

@media only screen and (max-width: 400px) {
    .ninja_world_bol {
        background-size: 100%;
        width: 100%;
        margin-top: 150px;
    }
}

@media only screen and (max-width: 600px) and (min-width: 400px) {
    .ninja_world_bol {
        background-size: 95%;
        width: 100%;
        margin-top: 100px;
    }
}

.ninja_world_bol img
{

   /* position: absolute;
   transform: scale(0.7,0.7);
   z-index: -1; */

}

.get_app_container
{

  width: 55%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;

}

.ninja_sword
{

   width: 51%;
   height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   position: relative;
   left: 10px;
   top: 70px;

}

.getapp_butt
{

   width: 59%;
   height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;

}

@media only screen and (max-width: 360px) {
    .getapp_butt {
        width: 36%;
    }
}

@media only screen and (min-width: 361px) and (max-width: 399px) {
    .getapp_butt {
        width: 28%;
    }
}

@media only screen and (min-width: 400px) and (max-width: 500px) {
    .getapp_butt {
        width: 39%;
    }
}

@media only screen and (min-width: 501px) and (max-width: 700px) {
    .getapp_butt {
        width: 26%;
    }
}

@media only screen and (min-width: 701px) {
    .getapp_butt {
        width: 50%;
    }
}

.get_app_container img
{

  /* position: relative;
  right: 150px; */

}

.ninja_world_bol a
{

  margin-top: 108px;
  width: auto;
  padding-top: 13px;
  padding-bottom: 13px;
  font-size: 13px;
  position: absolute;

}

.slider_partners
{

   width: 100%;
   height: 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;

}

.slider_partners h3
{

   margin-bottom: -15px;

}

.welcome-heart-section {
    padding-top: 120px;
    padding-bottom: 50px;
    background-attachment: fixed;
}

.welcome-page-content-spacer {
    margin-left: 15%;
    margin-right: 15%;
}
/* ... */

